<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeOrderActivity">


    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupDrinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdditives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/drinks_tea"
            android:textColor="@android:color/holo_purple"

            />

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/drinks_coffee"
            android:textColor="@android:color/holo_purple" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/additives"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/CheckBoxMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDrinks" />

    <CheckBox
        android:id="@+id/CheckBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/additives_sugar"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="@id/CheckBoxMilk"
        app:layout_constraintEnd_toStartOf="@id/CheckBoxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditives"
        app:layout_constraintTop_toTopOf="@id/CheckBoxMilk" />

    <CheckBox
        android:id="@+id/CheckBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/additives_milk"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/textViewDrinkType"
        app:layout_constraintEnd_toEndOf="@id/CheckBoxLemon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CheckBoxSugar"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditives" />

    <CheckBox
        android:id="@+id/CheckBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/additives_lemon"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="@id/CheckBoxMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/CheckBoxMilk"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditives"
        app:layout_constraintTop_toTopOf="@id/CheckBoxMilk" />

    <TextView
        android:id="@+id/textViewDrinkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/drink_type"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBoxMilk" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:entries="@array/types_tea"
        app:layout_constraintBottom_toTopOf="@+id/buttonOrder"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType" />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:entries="@array/types_coffee"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonOrder"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea" />

</androidx.constraintlayout.widget.ConstraintLayout>